Первый экран без формы

--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -10,13 +10,13 @@
 			<nav class="menu__body">
 				<ul class="menu__list list-reset">
 					<li class="menu__item">
-						<a class="menu__link link-reset" data-goto="#/">Home</a>
+						<a class="menu__link link-reset" data-goto="">Home</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link link-reset" data-goto="#/">Section</a>
+						<a class="menu__link link-reset" data-goto="">Section</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link link-reset" data-goto="#/">Footer</a>
+						<a class="menu__link link-reset" data-goto="">Footer</a>
 					</li>
 				</ul>
 			</nav>
