--- a/assets/html/partials/hero.html
+++ b/assets/html/partials/hero.html
@@ -1,5 +1,23 @@
-<section class="section">
+<section class="section section-hero">
 	<div class="container">
-
+		<div class="hero__wrap">
+			<div class="hero__content">
+				<div class="hero__titles">
+					<h1 class="hero__title">
+						Промышленный альпинизм
+					</h1>
+					<h2 class="hero__subtitle">
+						любой сложности в Москве и Московской области
+					</h2>
+				</div>
+				<div class="hero__descr hero-descr">
+					<p class="hero-descr__item">Команда профессиональных альпинистов и арбористов.</p>
+					<p class="hero-descr__item">
+						Работаем без посредников!
+					</p>
+				</div>
+			</div>
+			<div class="hero__form">Форма</div>
+		</div>
 	</div>
 </section>
