--- a/assets/html/layouts/default.html
+++ b/assets/html/layouts/default.html
@@ -4,7 +4,12 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link type="image/png" href="favicon/favicon.png" rel="shortcut icon" />
+
+	<link type="image/png" href="/favicon/favicon-96x96.png" rel="icon" sizes="96x96" />
+	<link type="image/svg+xml" href="/favicon/favicon.svg" rel="icon" />
+	<link href="/favicon/favicon.ico" rel="shortcut icon" />
+	<link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
+	<link href="/favicon/site.webmanifest" rel="manifest" />
 
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<meta name="theme-color" content="#111111" />
@@ -17,9 +22,7 @@
 <body>
 
 	<div class="site-container">
-
 		{{> body}}
-
 	</div>
 	<script src="js/scripts.min.js"></script>
 
