--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -51,3 +51,14 @@
 		}
 	}
 }
+
+.section {
+	padding: 100px 0;
+
+	&-hero {
+		background-image: url('@img/hero/hero-bg.webp');
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+}
