--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -19,7 +19,7 @@ body {
 	font-family: var(--font-main);
 	font-weight: 400;
 	line-height: var(--line-height);
-	color: var(--dark-color);
+	color: var(--light-color);
 	background-color: var(--light-color);
 	@include adaptive-font(18, 16);
 
@@ -43,6 +43,15 @@ body {
 	margin: 0 auto;
 	padding: 0 15px;
 	max-width: $container-width + px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	line-height: var(--line-height);
 }
 
 img {
