--- a/assets/html/partials/advantages.html
+++ b/assets/html/partials/advantages.html
@@ -1,6 +1,6 @@
 <section class="section section-advantages">
 	<div class="container">
-		<div class="advantages__cards">
+		<div class="advantages">
 			<div class="advantages__card advantages-card">
 				<div class="advantages-card__inner">
 					<img class="advantages-card__icon" src="../@img/advantages/icon-1.webp" alt="Иконка карточки с услугой">
