--- a/assets/html/partials/hero.html
+++ b/assets/html/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="section section-hero">
 	<div class="container">
-		<div class="hero__wrap">
+		<div class="hero">
 			<div class="hero__content">
 				<div class="hero__titles">
 					<h1 class="hero__title">
