Вёрстка нескольких секций

--- a/assets/html/partials/advantages.html
+++ b/assets/html/partials/advantages.html
@@ -9,7 +9,7 @@
 					<h2 class="advantages-card__title">
 						Комплекс услуг
 					</h2>
-					<p class="advantages-card__descr">
+					<p class="advantages-card__descr text">
 						Для удобства клиентов предоставляем полный комплекс услуг
 					</p>
 				</div>
@@ -22,7 +22,7 @@
 					<h2 class="advantages-card__title">
 						Опыт работы
 					</h2>
-					<p class="advantages-card__descr">
+					<p class="advantages-card__descr text">
 						Специалисты имеют необходимую квалификацию и большой опыт
 					</p>
 				</div>
@@ -35,7 +35,7 @@
 					<h2 class="advantages-card__title">
 						Оборудование
 					</h2>
-					<p class="advantages-card__descr">
+					<p class="advantages-card__descr text">
 						Используем только профессиональное оборудование и снаряжение
 					</p>
 				</div>
@@ -48,7 +48,7 @@
 					<h2 class="advantages-card__title">
 						Гарантия
 					</h2>
-					<p class="advantages-card__descr">
+					<p class="advantages-card__descr text">
 						Работаем официально по договору и даем гарантию на все работы
 					</p>
 				</div>
