--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -62,6 +62,7 @@ img {
 .link-reset {
 	font-family: inherit;
 	font-size: inherit;
+	line-height: inherit;
 	text-decoration: none;
 	color: inherit;
 	cursor: pointer;
