--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -8,4 +8,8 @@
 @use './chunk/header';
 @use './chunk/hero';
 @use './chunk/advantages';
+@use './chunk/services';
+@use './chunk/schemes';
+@use './chunk/team';
+@use './chunk/articles';
 @use './chunk/footer';
