--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,3 +1,7 @@
 @use 'mixins/font-face' as *;
-@include font-face('Circe', 'Circe-Regular', 400, normal);
-@include font-face('Poppins', 'Poppins-Regular', 400, normal);
+@include font-face('Inter', 'Inter-SemiBold', 600, normal);
+@include font-face('Inter', 'Inter-Bold', 700, normal);
+@include font-face('Inter', 'Inter-ExtraBold', 800, normal);
+@include font-face('Roboto', 'Roboto', 400, normal);
+@include font-face('Roboto', 'Roboto', 500, normal);
+@include font-face('Roboto', 'Roboto', 600, normal);
