--- a/assets/scss/chunk/_advantages.scss
+++ b/assets/scss/chunk/_advantages.scss
@@ -29,7 +29,7 @@
 		counter-increment: card-counter;
 		position: relative;
 		flex-shrink: 0;
-		border: 1px solid #dcdada;
+		border: 1px solid var(--gray-color);
 		border-radius: 50%;
 		padding: 18px;
 		width: 90px;
@@ -43,17 +43,17 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			border: 1px solid #dcdada;
+			border: 1px solid var(--gray-color);
 			border-radius: 50%;
 			width: 28px;
 			height: 28px;
 			font-size: 14px;
 			text-align: center;
-			color: #dcdada;
-			background: #fff;
+			color: var(--gray-color);
+			background-color: var(--light-color);
 			transition:
-				background-color 0.3s,
-				border-color 0.3s;
+				background-color var(--time),
+				border-color var(--time);
 		}
 	}
 
@@ -70,12 +70,11 @@
 	&__title {
 		margin: 0;
 		margin-bottom: 10px;
+		font-family: var(--font-second);
 		@include adaptive-font(20, 16);
 	}
 
 	&__descr {
-		margin: 0;
-		color: #393738;
 		@include adaptive-font(15, 15);
 	}
 
@@ -83,6 +82,7 @@
 		.advantages-card__inner {
 			&::before {
 				border-color: var(--accent-color);
+				color: var(--light-color);
 				background-color: var(--accent-color);
 			}
 		}
