--- a/assets/scss/chunk/_hero.scss
+++ b/assets/scss/chunk/_hero.scss
@@ -23,12 +23,14 @@
 
 	&__title {
 		margin: 0;
+		font-family: var(--font-second);
 		line-height: 100%;
 		@include adaptive-font(57, 20);
 	}
 
 	&__subtitle {
 		margin: 0;
+		font-weight: 400;
 		line-height: 100%;
 		@include adaptive-font(42, 18);
 	}
