--- a/assets/html/partials/services.html
+++ b/assets/html/partials/services.html
@@ -1,4 +1,4 @@
-<section class="section section-services">
+<section class="section">
 	<div class="services">
 		<div class="container">
 			<h2 class="services__title title title--center">
