--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -128,6 +128,7 @@
 	display: inline-block;
 	border-radius: 4px;
 	padding: 10px 22px;
+	font-size: 15px;
 	text-align: center;
 	background-color: var(--accent-color);
 	transition: background-color var(--time);
