--- a/assets/scss/chunk/_services.scss
+++ b/assets/scss/chunk/_services.scss
@@ -39,7 +39,13 @@
 				color: var(--accent-color);
 			}
 
+			&:first-child {
+				padding-left: 0;
+			}
+
 			&:last-child {
+				padding-right: 0;
+
 				&::after {
 					display: none;
 				}
@@ -58,9 +64,25 @@
 
 		&-item {
 			display: grid;
-			grid-template-columns: repeat(4, 1fr);
-			width: 100%;
-			gap: 2px;
+			grid-auto-rows: 24vw;
+			grid-template-columns: repeat(4, 24vw);
+			width: fit-content;
+			gap: 5px;
+
+			@media (width <= 992px) {
+				grid-auto-rows: 33vw;
+				grid-template-columns: repeat(3, 33vw);
+			}
+
+			@media (width <= 768px) {
+				grid-auto-rows: 49vw;
+				grid-template-columns: repeat(2, 49vw);
+			}
+
+			@media (width <= 480px) {
+				grid-auto-rows: 99vw;
+				grid-template-columns: 100vw;
+			}
 		}
 	}
 }
@@ -73,7 +95,6 @@
 	border-radius: 25px;
 	padding: 35px;
 	width: 100%;
-	min-height: 440px;
 	line-height: var(--line-height-big);
 	background-position: center;
 	background-size: cover;
@@ -145,6 +166,7 @@
 			top: 0;
 			font-weight: 400;
 			color: var(--accent-color);
+			pointer-events: none;
 			@include adaptive-font(22, 20);
 		}
 
@@ -158,7 +180,6 @@
 		align-items: flex-start;
 		font-weight: 500;
 		gap: 5px;
-		@include adaptive-font(15, 15);
 	}
 
 	&:hover {
