--- a/assets/scss/chunk/_team.scss
+++ b/assets/scss/chunk/_team.scss
@@ -20,6 +20,12 @@
 		grid-template-columns: repeat(3, 1fr);
 		gap: 20px;
 		margin-bottom: 50px;
+
+		@media (width <= 992px) {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+		}
 	}
 
 	&__link {
@@ -49,15 +55,19 @@
 			content: '';
 			position: absolute;
 			right: 0;
-			top: 0;
+			bottom: 0;
 			z-index: 5;
 			width: 100%;
-			min-height: 100px;
+			min-height: 100%;
 			background-image: url('@img/icons/sprite.svg#team-decor');
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
-			transform: translateY(-100%);
+			transform: translateY(-95%);
+
+			@media (width <= 992px) {
+				display: none;
+			}
 		}
 	}
 
@@ -68,6 +78,14 @@
 		font-family: var(--font-second);
 		font-weight: 700;
 		@include adaptive-font(24, 18);
+	}
+
+	&__link {
+		transition: filter var(--time);
+
+		&:hover {
+			filter: brightness(80%);
+		}
 	}
 
 	&__descr {
@@ -81,5 +99,13 @@
 		.team-card__img {
 			scale: (1.1);
 		}
+	}
+
+	@media (width <= 992px) {
+		max-width: 300px;
+	}
+
+	@media (width <= 480px) {
+		max-width: 100%;
 	}
 }
