Правки в нескольких секциях и вёрстка

--- a/assets/html/partials/articles.html
+++ b/assets/html/partials/articles.html
@@ -1,6 +1,87 @@
 <section class="section section-articles">
 	<div class="container">
 		<div class="articles">
+
+			<div class="info-card info-card--center">
+				<div class="info-card__inner">
+					<span class="info-card__subtitle info-card__subtitle--uppercase info-card__subtitle--gray-color">
+						Статьи
+					</span>
+					<h2 class="info-card__title title">
+						Полезные статьи на тему промышленного альпинизма и арбористики
+					</h2>
+				</div>
+
+				<p class="info-card__text text">
+					Мир промышленного альпинизма настолько обширен, что наш, да и любой сайт просто не может вместить его. В этом
+					разделе мы
+					постараемся более подробно рассказать о сфере промышленного альпинизма и арбористики.
+				</p>
+			</div>
+
+			<div class="articles__cards">
+				<div class="articles__card articles-card">
+					<div class="articles-card__img">
+						<a class="articles-card__link-img" href="#/">
+							<img src="@img/team/img-1.webp" alt="Изображение статьи">
+						</a>
+					</div>
+					<div class="articles-card__content">
+						<h3 class="articles-card__title">
+							<a class="articles-card__link link-reset" href="#/">
+								Аварийное вскрытие квартир через окно
+							</a>
+						</h3>
+						<p class="articles-card__excerpt">
+							Наверное, многим знакомо неприятное чувство, что вы забыли закрыть дверь? Или другая ситуация: дверь
+							закрыть закрыли, а
+							ключи…
+						</p>
+					</div>
+				</div>
+				<div class="articles__card articles-card">
+					<div class="articles-card__img">
+						<a class="articles-card__link-img" href="#/">
+							<img src="@img/team/img-1.webp" alt="Изображение статьи">
+						</a>
+					</div>
+					<div class="articles-card__content">
+						<h3 class="articles-card__title">
+							<a class="articles-card__link link-reset" href="#/">
+								Аварийное вскрытие квартир через окно
+							</a>
+						</h3>
+						<p class="articles-card__excerpt">
+							Наверное, многим знакомо неприятное чувство, что вы забыли закрыть дверь? Или другая ситуация: дверь
+							закрыть закрыли, а
+							ключи…
+						</p>
+					</div>
+				</div>
+				<div class="articles__card articles-card">
+					<div class="articles-card__img">
+						<a class="articles-card__link-img" href="#/">
+							<img src="@img/team/img-1.webp" alt="Изображение статьи">
+						</a>
+					</div>
+					<div class="articles-card__content">
+						<h3 class="articles-card__title">
+							<a class="articles-card__link link-reset" href="#/">
+								Аварийное вскрытие квартир через окно
+							</a>
+						</h3>
+						<p class="articles-card__excerpt">
+							Наверное, многим знакомо неприятное чувство, что вы забыли закрыть дверь? Или другая ситуация: дверь
+							закрыть закрыли, а
+							ключи…
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<a class="team__link link link-reset" href="#/">Смотреть все</a>
+
+
 		</div>
 	</div>
 </section>
