--- a/assets/html/partials/schemes.html
+++ b/assets/html/partials/schemes.html
@@ -1,10 +1,13 @@
 <section class="section">
 	<div class="container">
 		<div class="schemes">
-			<div class="info-card">
-				<h2 class="info-card__title title">
-					Схема работы
-				</h2>
+
+			<div class="info-card info-card--text-center">
+				<div class="info-card__inner">
+					<h2 class="info-card__title title">
+						Схема работы
+					</h2>
+				</div>
 
 				<p class="info-card__text text">
 					Наше сотрудничество начинается с вашего звонка, сообщения в один из мессенджеров или письма на электронную
