--- a/assets/html/partials/advantages.html
+++ b/assets/html/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section section-advantages">
 	<div class="container">
 		<div class="advantages">
 			<div class="advantages__card advantages-card">
