--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -58,10 +58,15 @@
 	padding: 100px 0;
 
 	&-hero {
-		background-image: url('@img/hero/hero-bg.webp');
+		background-image: linear-gradient(rgb(0 0 0 / 30%), rgb(0 0 0 / 30%)),
+			url('@img/hero/hero-bg.webp');
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
+	}
+
+	&-advantages {
+		padding-bottom: 0;
 	}
 
 	&-articles {
@@ -77,6 +82,10 @@
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-color: var(--bg-color);
+	}
+
+	@media (width <= 768px) {
+		padding: 50px 0;
 	}
 }
 
@@ -168,16 +177,56 @@
 	display: flex;
 	align-items: flex-start;
 	justify-content: space-between;
-	gap: 30px;
+	gap: 40px;
+
+	&__inner {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+
+		@media (width <= 768px) {
+			width: 100%;
+		}
+	}
+
+	&__subtitle {
+		position: relative;
+		display: block;
+		margin-bottom: 5px;
+		padding-left: 30px;
+		max-width: fit-content;
+		font-family: var(--font-second);
+		font-weight: 700;
+		font-size: 14px;
+		letter-spacing: 1px;
+
+		&::before {
+			content: '';
+			position: absolute;
+			left: 0;
+			top: 50%;
+			width: 20px;
+			height: 3px;
+			background-color: var(--accent-color);
+			transform: translateY(-50%);
+		}
+
+		&--uppercase {
+			text-transform: uppercase;
+		}
+
+		&--gray-color {
+			color: var(--gray-text-color);
+		}
+	}
 
 	&__title {
 		margin: 0;
-		max-width: 50%;
 
 		@media (width <= 768px) {
 			margin: 0 auto;
+			width: 100%;
 			max-width: 100%;
-			text-align: center;
 		}
 	}
 
@@ -186,11 +235,19 @@
 
 		@media (width <= 768px) {
 			max-width: 100%;
-			text-align: center;
 		}
 	}
 
+	&--center {
+		align-items: center;
+	}
+
 	@media (width <= 768px) {
+		gap: 20px;
 		flex-direction: column;
+
+		&--text-center {
+			text-align: center;
+		}
 	}
 }
