Вёрстка, правки, адаптация многих блоков

--- a/assets/html/partials/hero.html
+++ b/assets/html/partials/hero.html
@@ -10,9 +10,9 @@
 						любой сложности в Москве и Московской области
 					</h2>
 				</div>
-				<div class="hero__descr hero-descr">
-					<p class="hero-descr__item">Команда профессиональных альпинистов и арбористов.</p>
-					<p class="hero-descr__item">
+				<div class="hero__text hero-text">
+					<p class="hero-text__item">Команда профессиональных альпинистов и арбористов.</p>
+					<p class="hero-text__item">
 						Работаем без посредников!
 					</p>
 				</div>
