--- a/assets/html/partials/schemes.html
+++ b/assets/html/partials/schemes.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="schemes">
 
-			<div class="info-card info-card--text-center">
+			<div class="schemes__info-card info-card info-card--text-center">
 				<div class="info-card__inner">
 					<h2 class="info-card__title title">
 						Схема работы
