--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -11,5 +11,8 @@
 @use './chunk/services';
 @use './chunk/schemes';
 @use './chunk/team';
+@use './chunk/technic';
+@use './chunk/letters';
 @use './chunk/articles';
+@use './chunk/works';
 @use './chunk/footer';
