--- a/assets/html/partials/footer.html
+++ b/assets/html/partials/footer.html
@@ -1,5 +1,173 @@
 <footer class="footer">
 	<div class="container">
+		<div class="footer__wrap">
 
+			<div class="footer__item">
+				<div class="footer__info">
+					<a class="footer__logo" href="#/">
+						<img src="@img/header/logo.webp" alt="Логотип">
+					</a>
+					<p class="footer__text text">
+						Промышленный альпинизм любой сложности в Москве и Московской области
+					</p>
+				</div>
+				<div class="footer__company">
+					<span class="footer__details">
+						ООО «Про-альпинизм»
+					</span>
+					<span class="footer__details">
+						ИНН 12345678910
+					</span>
+					<address class="footer__address">
+						141074, Московская область, город Королев, Ярославский проезд, дом 3а
+					</address>
+				</div>
+			</div>
+
+			<div class="footer__item">
+				<div class="footer__inner">
+					<h2 class="footer__title title">О компании</h2>
+					<ul class="footer__menu footer-menu list-reset">
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Главная
+							</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Услуги
+							</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								О компании
+							</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Контакты
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="footer__item">
+				<div class="footer__inner">
+					<h2 class="footer__title title">Категория</h2>
+					<ul class="footer__menu footer-menu list-reset">
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Услуга
+							</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Услуга
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				<div class="footer__inner">
+					<h2 class="footer__title title">Категория</h2>
+					<ul class="footer__menu footer-menu list-reset">
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Услуга
+							</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Услуга
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				<div class="footer__inner">
+					<h2 class="footer__title title">Категория</h2>
+					<ul class="footer__menu footer-menu list-reset">
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Услуга
+							</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Услуга
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				<div class="footer__inner">
+					<h2 class="footer__title title">Категория</h2>
+					<ul class="footer__menu footer-menu list-reset">
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Услуга
+							</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link link-reset" href="#/">
+								Услуга
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="footer__item">
+				<div class="footer__inner">
+					<div class="footer__phone footer-phone">
+						<svg class="footer-phone__icon">
+							<use href="img/icons/sprite.svg#phone"></use>
+						</svg>
+						<a class="footer-phone__link link-reset" href="tel:+74993430609">
+							+7 (499) 343-06-09
+						</a>
+					</div>
+					<a class="link link-reset" href="https://wa.me/79265131833">
+						Написать в WhatsApp
+					</a>
+				</div>
+
+				<div class="footer__inner">
+					<ul class="footer__contacts footer-contacts list-reset">
+						<li class="footer-contacts__item">
+							<svg class="footer-contacts__icon">
+								<use href="img/icons/sprite.svg#whatsapp"></use>
+							</svg>
+							<a class="footer-contacts__link link-reset" href="https://wa.me/79265131833">
+								+7 (926) 513-18-33
+							</a>
+						</li>
+						<li class="footer-contacts__item">
+							<svg class="footer-contacts__icon">
+								<use href="img/icons/sprite.svg#whatsapp"></use>
+							</svg>
+							<a class="footer-contacts__link link-reset" href="https://wa.me/79265131833">
+								+7 (926) 513-18-33
+							</a>
+						</li>
+						<li class="footer-contacts__item">
+							<svg class="footer-contacts__icon">
+								<use href="img/icons/sprite.svg#whatsapp"></use>
+							</svg>
+							<a class="footer-contacts__link link-reset" href="https://wa.me/79265131833">
+								+7 (926) 513-18-33
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				<form class="footer__inner footer__form">
+					ФОРМА
+				</form>
+
+			</div>
+
+		</div>
 	</div>
 </footer>
