--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -3,23 +3,71 @@
 		<a class="header__logo logo" href="#/">
 			<img class="logo__img" src="@img/header/logo.webp" alt="Логотип">
 		</a>
-		<div class="header__menu menu">
-			<button class="menu__burger burger btn-reset">
-				<span class="burger__line"></span>
-			</button>
-			<nav class="menu__body">
-				<ul class="menu__list list-reset">
-					<li class="menu__item">
-						<a class="menu__link link-reset" data-goto="">Home</a>
-					</li>
-					<li class="menu__item">
-						<a class="menu__link link-reset" data-goto="">Section</a>
-					</li>
-					<li class="menu__item">
-						<a class="menu__link link-reset" data-goto="">Footer</a>
-					</li>
-				</ul>
-			</nav>
+		<div class="header__inner">
+			<div class="header__top">
+				<div class="header__contacts header-contacts">
+					<div class="header-contacts__item">
+						<svg class="header-contacts__icon">
+							<use href="img/icons/sprite.svg#phone"></use>
+						</svg>
+						<a class="header-contacts__link link-reset" href="tel:+74993430609">
+							+7 (499) 343-06-09
+						</a>
+					</div>
+					<div class="header-contacts__item">
+						<svg class="header-contacts__icon">
+							<use href="img/icons/sprite.svg#phone"></use>
+						</svg>
+						<a class="header-contacts__link link-reset" href="https://wa.me/79265131833">
+							+7 (926) 513-18-33
+						</a>
+					</div>
+					<div class="header-contacts__item">
+						<svg class="header-contacts__icon">
+							<use href="img/icons/sprite.svg#phone"></use>
+						</svg>
+						<a class="header-contacts__link link-reset" href="mailto:pro-alpinizm@mail.ru">
+							pro-alpinizm@mail.ru
+						</a>
+					</div>
+				</div>
+				<div class="header__top-right">
+					<div class="header__socials">
+						SOCIALS
+					</div>
+					<a class="header__link link link-reset" href="#">Заказать звонок</a>
+				</div>
+			</div>
+			<div class="header__menu menu">
+				<button class="menu__burger burger btn-reset">
+					<span class="burger__line"></span>
+				</button>
+				<nav class="menu__body">
+					<ul class="menu__list list-reset">
+						<li class="menu__item">
+							<a class="menu__link link-reset" data-goto="">Главная</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link link-reset" data-goto="">Услуги</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link link-reset" data-goto="">О компании</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link link-reset" data-goto="">Прайс</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link link-reset" data-goto="">Выполненные работы</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link link-reset" data-goto="">Статьи</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link link-reset" data-goto="">Контакты</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
 		</div>
 	</div>
 </header>
