--- a/assets/html/partials/team.html
+++ b/assets/html/partials/team.html
@@ -15,7 +15,7 @@
 						<h3 class="team-card__name">
 							<a class="team-card__link link-reset" href="#/">Артём</a>
 						</h3>
-						<p class="team-card__descr">
+						<p class="team-card__prof">
 							Арборист, пром. альпинист
 						</p>
 					</div>
@@ -27,7 +27,7 @@
 						<h3 class="team-card__name">
 							<a class="team-card__link link-reset" href="#/">Анатолий</a>
 						</h3>
-						<p class="team-card__descr">
+						<p class="team-card__prof">
 							Арборист
 						</p>
 					</div>
@@ -39,7 +39,7 @@
 						<h3 class="team-card__name">
 							<a class="team-card__link link-reset" href="#/">Иван</a>
 						</h3>
-						<p class="team-card__descr">
+						<p class="team-card__prof">
 							Оператор измельчителя веток
 						</p>
 					</div>
