--- a/assets/scss/chunk/_articles.scss
+++ b/assets/scss/chunk/_articles.scss
@@ -3,8 +3,6 @@
 
 .articles {
 	&__cards {
-		// display: grid;
-		// grid-template-columns: repeat(3, 1fr);
 		display: flex;
 		flex-wrap: wrap;
 		align-items: flex-start;
@@ -88,6 +86,63 @@
 		margin: 0;
 		font-size: 16px;
 		color: var(--gray-text-color);
+	}
+}
+
+.article-page {
+	&__cards {
+		display: grid;
+		grid-gap: 30px;
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
+
+.article-page-card {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 30px;
+	border-radius: 6px;
+	padding: 30px;
+	box-shadow: 0 12px 21px 0 rgb(0 0 0 / 10%);
+	background-color: var(--light-color);
+
+	&__img {
+		display: flex;
+		flex-shrink: 0;
+		align-items: center;
+		justify-content: center;
+		overflow: hidden;
+		border-radius: 6px;
+		width: 100%;
+		max-width: fit-content;
+
+		img {
+			max-width: 300px;
+		}
+	}
+
+	&__content {
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
+	}
+
+	&__title {
+		margin: 0;
+		font-family: var(--font-second);
+		font-weight: 800;
+		line-height: var(--line-height-big);
+		@include adaptive-font(26, 26);
+	}
+
+	&__link {
+		color: var(--dark-title-color);
+		transition: color var(--time);
+
+		&:hover {
+			color: var(--accent-color);
+		}
 	}
 }
 
