--- a/assets/scss/chunk/_header.scss
+++ b/assets/scss/chunk/_header.scss
@@ -2,18 +2,183 @@
 	position: static;
 	z-index: 10;
 	width: 100%;
-	background-color: var(--accent-color);
+	background-color: var(--light-color);
 
 	&__container {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding-top: 15px;
-		padding-bottom: 15px;
+		padding: 0;
+		max-width: 100%;
+	}
+
+	&__inner {
+		display: flex;
+		flex-direction: column;
+		align-self: stretch;
+		padding-left: 40px;
+		width: 100%;
+
+		@media (width <= 1475px) {
+			padding-left: 20px;
+		}
+
+		@media (width <= 1100px) {
+			padding-left: 10px;
+		}
+	}
+
+	&__top {
+		position: relative;
+		display: flex;
+		justify-content: space-between;
+		height: 40%;
+
+		&::after {
+			content: '';
+			position: absolute;
+			right: 0;
+			bottom: 0;
+			width: 110%;
+			height: 2px;
+			background-color: var(--gray-color);
+		}
+
+		&-right {
+			display: flex;
+			gap: 70px;
+
+			@media (width <= 1475px) {
+				gap: 30px;
+			}
+
+			@media (width <= 1440px) {
+				gap: 20px;
+			}
+		}
+	}
+
+	&__socials {
+		position: relative;
+		padding-right: 20px;
+		width: 255px;
+		background-color: #000;
+
+		&::before {
+			content: '';
+			position: absolute;
+			right: 0;
+			top: 0;
+			border-right: 2px solid var(--gray-color);
+			width: 2px;
+			height: 100%;
+			transform: rotate(23deg);
+		}
+
+		@media (width <= 1100px) {
+			padding-right: 0;
+
+			&::before {
+				display: none;
+			}
+		}
+	}
+
+	&__link {
+		display: flex;
+		align-items: center;
+		clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0% 100%);
+		border-radius: 0;
+		padding: 10px 45px;
+		font-family: var(--font-second);
+		font-weight: 600;
+		text-transform: uppercase;
+
+		@media (width <= 1440px) {
+			padding: 10px 25px;
+		}
 	}
 
 	&--sticky {
 		position: sticky;
 		transition: top 0.3s;
+	}
+}
+
+.header-contacts {
+	display: flex;
+	height: 100%;
+
+	&__item {
+		display: flex;
+		align-items: center;
+		margin-right: 50px;
+		width: fit-content;
+		gap: 10px;
+
+		&:first-child {
+			position: relative;
+			margin-right: 25px;
+			padding-right: 25px;
+
+			&::before {
+				content: '';
+				position: absolute;
+				right: 0;
+				top: 0;
+				border-right: 2px solid var(--gray-color);
+				width: 2px;
+				height: 100%;
+				transform: rotate(23deg);
+			}
+
+			@media (width <= 1475px) {
+				margin-right: 15px;
+				padding-right: 15px;
+			}
+
+			@media (width <= 1440px) {
+				margin-right: 10px;
+				padding-right: 10px;
+			}
+		}
+
+		&:last-child {
+			margin: 0;
+		}
+
+		@media (width <= 1475px) {
+			margin-right: 30px;
+		}
+
+		@media (width <= 1440px) {
+			margin-right: 20px;
+		}
+
+		@media (width <= 1300px) {
+			&:nth-child(2) {
+				display: none;
+			}
+		}
+	}
+
+	&__icon {
+		width: 15px;
+		height: 15px;
+
+		use {
+			fill: var(--accent-color);
+		}
+	}
+
+	&__link {
+		font-weight: 500;
+		font-size: 14px;
+		color: var(--gray-text-color);
+		transition: color var(--time);
+
+		&:hover {
+			color: var(--dark-color);
+		}
 	}
 }
