--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -5,3 +5,4 @@
 @include font-face('Roboto', 'Roboto', 400, normal);
 @include font-face('Roboto', 'Roboto', 500, normal);
 @include font-face('Roboto', 'Roboto', 600, normal);
+@include font-face('Awesome-Solid', 'Awesome-Solid', 900, normal);
