--- a/assets/scss/chunk/_articles.scss
+++ b/assets/scss/chunk/_articles.scss
@@ -73,9 +73,13 @@
 		max-width: fit-content;
 		font-family: var(--font-second);
 		font-weight: 700;
+
+		@include adaptive-font(24, 18);
+	}
+
+	&__link {
 		color: var(--dark-title-color);
 		transition: color var(--time);
-		@include adaptive-font(24, 18);
 
 		&:hover {
 			color: var(--accent-color);
