--- a/assets/html/partials/articles.html
+++ b/assets/html/partials/articles.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="articles">
 
-			<div class="info-card info-card--center">
+			<div class="articles__info-card info-card info-card--center">
 				<div class="info-card__inner">
 					<span class="info-card__subtitle info-card__subtitle--uppercase info-card__subtitle--gray-color">
 						Статьи
