--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -13,6 +13,7 @@
 @use './chunk/team';
 @use './chunk/technic';
 @use './chunk/letters';
+@use './chunk/reviews';
 @use './chunk/articles';
 @use './chunk/works';
 @use './chunk/footer';
