Подключение шрифтовых иконок и их установка

--- a/assets/html/partials/contacts.html
+++ b/assets/html/partials/contacts.html
@@ -22,10 +22,7 @@
 
 				<div class="contacts-info__list">
 					<div class="contacts-info__item contact">
-						<div class="contact__icon">
-							<svg>
-								<use href="img/icons/sprite.svg#pin"></use>
-							</svg>
+						<div class="contact__icon fa-location-dot">
 						</div>
 						<div class="contact__texts">
 							<h3 class="contact__title">Адрес</h3>
@@ -36,10 +33,7 @@
 					</div>
 
 					<div class="contacts-info__item contact">
-						<div class="contact__icon">
-							<svg>
-								<use href="img/icons/sprite.svg#mail"></use>
-							</svg>
+						<div class="contact__icon fa-envelope">
 						</div>
 						<div class="contact__texts">
 							<h3 class="contact__title">Адрес</h3>
@@ -50,11 +44,7 @@
 					</div>
 
 					<div class="contacts-info__item contact">
-						<div class="contact__icon">
-							<svg>
-								<use href="img/icons/sprite.svg#phone"></use>
-							</svg>
-						</div>
+						<div class="contact__icon fa-phone-volume">						</div>
 						<div class="contact__texts">
 							<h3 class="contact__title">Телефоны</h3>
 							<div class="contact__inner">
@@ -69,11 +59,7 @@
 					</div>
 
 					<div class="contacts-info__item contact">
-						<div class="contact__icon">
-							<svg>
-								<use href="img/icons/sprite.svg#pin"></use>
-							</svg>
-						</div>
+						<div class="contact__icon fa-clock"></div>
 						<div class="contact__texts">
 							<h3 class="contact__title">Адрес</h3>
 							<address class="contact__text">
@@ -90,24 +76,18 @@
 
 				<a class="contacts-info__link link-reset" href="#/">Публичная оферта</a>
 
-				<div class="contacts-info__socials">
-					<a class="contacts-info__social contacts-info__social--wa link-reset" href="#/">
-						И
+				<div class="socials">
+					<a class="socials__link socials__link--wa fa-whatsapp link-reset" href="#/" target="_blank">
 					</a>
-					<a class="contacts-info__social contacts-info__social--tg link-reset" href="#/">
-						И
+					<a class="socials__link socials__link--tg fa-telegram link-reset" href="#/" target="_blank">
 					</a>
-					<a class="contacts-info__social contacts-info__social--vk link-reset" href="#/">
-						И
+					<a class="socials__link socials__link--vk fa-vk link-reset" href="#/" target="_blank">
 					</a>
-					<a class="contacts-info__social contacts-info__social--tt link-reset" href="#/">
-						И
+					<a class="socials__link socials__link--tt fa-tiktok link-reset" href="#/" target="_blank">
 					</a>
-					<a class="contacts-info__social contacts-info__social--yt link-reset" href="#/">
-						И
+					<a class="socials__link socials__link--yt fa-youtube link-reset" href="#/" target="_blank">
 					</a>
-					<a class="contacts-info__social contacts-info__social--ig link-reset" href="#/">
-						И
+					<a class="socials__link socials__link--ig fa-instagram link-reset" href="#/" target="_blank">
 					</a>
 				</div>
 
