--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -32,8 +32,19 @@
 					</div>
 				</div>
 				<div class="header__top-right">
-					<div class="header__socials">
-						SOCIALS
+					<div class="header__socials socials">
+						<a class="socials__link socials__link--wa fa-whatsapp link-reset" href="#/" target="_blank">
+						</a>
+						<a class="socials__link socials__link--tg fa-telegram link-reset" href="#/" target="_blank">
+						</a>
+						<a class="socials__link socials__link--vk fa-vk link-reset" href="#/" target="_blank">
+						</a>
+						<a class="socials__link socials__link--tt fa-tiktok link-reset" href="#/" target="_blank">
+						</a>
+						<a class="socials__link socials__link--yt fa-youtube link-reset" href="#/" target="_blank">
+						</a>
+						<a class="socials__link socials__link--ig fa-instagram link-reset" href="#/" target="_blank">
+						</a>
 					</div>
 					<a class="header__link link link-reset" href="#">Заказать звонок</a>
 				</div>
