--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -6,3 +6,5 @@
 @include font-face('Roboto', 'Roboto', 500, normal);
 @include font-face('Roboto', 'Roboto', 600, normal);
 @include font-face('Awesome-Solid', 'Awesome-Solid', 900, normal);
+@include font-face('Awesome-Regular', 'Awesome-Regular', 400, normal);
+@include font-face('Awesome-Brands', 'Awesome-Brands', 400, normal);
