--- a/assets/scss/chunk/_header.scss
+++ b/assets/scss/chunk/_header.scss
@@ -62,7 +62,7 @@
 		position: relative;
 		padding-right: 20px;
 		width: 255px;
-		background-color: #000;
+		font-size: 22px;
 
 		&::before {
 			content: '';
