--- a/assets/scss/chunk/_calc.scss
+++ b/assets/scss/chunk/_calc.scss
@@ -8,12 +8,17 @@
 		align-items: self-start;
 		justify-content: space-between;
 		gap: 30px;
+
+		@media (width <= 992px) {
+			flex-direction: column;
+		}
 	}
 
 	&__table {
 		overflow: hidden;
 		border-collapse: collapse;
 		border-radius: 20px;
+		width: 100%;
 		max-width: 60%;
 		box-shadow: 0 0 25px 0 rgb(0 0 0 / 10%);
 		text-align: left;
@@ -42,6 +47,10 @@
 		& tr:last-child > td {
 			border-bottom: none;
 		}
+
+		@media (width <= 992px) {
+			max-width: 100%;
+		}
 	}
 
 	&__inner {
@@ -50,6 +59,10 @@
 		width: 100%;
 		max-width: 35%;
 		box-shadow: 0 0 25px 0 rgb(0 0 0 / 10%);
+
+		@media (width <= 992px) {
+			max-width: 100%;
+		}
 	}
 
 	&__subtitle {
@@ -91,6 +104,7 @@
 	&__submit {
 		border-radius: 8px;
 		padding: 15px;
+		width: 100%;
 		background-color: var(--accent-color);
 		transition: background-color var(--time);
 
