Правки и адаптация секции услуг

--- a/assets/html/partials/services.html
+++ b/assets/html/partials/services.html
@@ -24,6 +24,9 @@
 						<h3 class="services-card__title">
 							Ремонт водонапорных башен
 						</h3>
+						<div class="services-card__cost">
+							От 40 ₽/м<sup>2</sup>
+						</div>
 						<div class="services-card__links">
 							<a class="services-card__link link-reset" href="#/">
 								Ремонт водонапорных башен
@@ -39,6 +42,9 @@
 						<h3 class="services-card__title">
 							Ремонт дымовых труб котельных
 						</h3>
+						<div class="services-card__cost">
+							От 40 ₽/м<sup>2</sup>
+						</div>
 						<div class="services-card__links">
 							<a class="services-card__link link-reset" href="#/">
 								Ремонт дымовых труб котельных
@@ -54,6 +60,9 @@
 						<h3 class="services-card__title">
 							Утепление фасадов
 						</h3>
+						<div class="services-card__cost">
+							От 40 ₽/м<sup>2</sup>
+						</div>
 						<div class="services-card__links">
 							<a class="services-card__link link-reset" href="#/">
 								Утепление фасадов
@@ -69,6 +78,9 @@
 						<h3 class="services-card__title">
 							Герметизация межпанельных швов
 						</h3>
+						<div class="services-card__cost">
+							От 40 ₽/м<sup>2</sup>
+						</div>
 						<div class="services-card__links">
 							<a class="services-card__link link-reset" href="#/">
 								Герметизация межпанельных швов
