--- a/assets/scss/chunk/_services.scss
+++ b/assets/scss/chunk/_services.scss
@@ -67,21 +67,32 @@
 			grid-auto-rows: 24vw;
 			grid-template-columns: repeat(4, 24vw);
 			width: fit-content;
-			gap: 5px;
+			gap: 20px;
+
+			@media (width <= 1500px) {
+				gap: 10px;
+			}
+
+			@media (width >= 1500px) {
+				grid-auto-rows: 1fr;
+				grid-template-columns: repeat(4, 1fr);
+			}
 
 			@media (width <= 992px) {
 				grid-auto-rows: 33vw;
-				grid-template-columns: repeat(3, 33vw);
+				grid-template-columns: repeat(3, 32vw);
+				gap: 5px;
 			}
 
 			@media (width <= 768px) {
 				grid-auto-rows: 49vw;
 				grid-template-columns: repeat(2, 49vw);
+				gap: 10px;
 			}
 
 			@media (width <= 480px) {
-				grid-auto-rows: 99vw;
-				grid-template-columns: 100vw;
+				grid-auto-rows: 98vw;
+				grid-template-columns: 98vw;
 			}
 		}
 	}
@@ -132,6 +143,18 @@
 		}
 	}
 
+	&__cost {
+		position: absolute;
+		right: 0;
+		top: 0;
+		border-radius: 0 0 0 15px;
+		padding: 10px 20px;
+		font-weight: 500;
+		color: var(--light-color);
+		background: var(--accent-color);
+		transition: transform var(--time);
+	}
+
 	&__links {
 		position: absolute;
 		left: 0;
@@ -148,6 +171,11 @@
 		transition-property: transform, opacity, visibility;
 		transition-duration: 0.5s;
 		gap: 20px;
+
+		@media (width <= 1200px) {
+			gap: 10px;
+			padding: 25px;
+		}
 	}
 
 	&__link {
@@ -181,6 +209,18 @@
 		align-items: flex-start;
 		font-weight: 500;
 		gap: 5px;
+
+		@media (width <= 1200px) {
+			& .link {
+				padding: 7px 12px;
+			}
+		}
+
+		@media (width <= 992px) {
+			& .link::after {
+				display: none;
+			}
+		}
 	}
 
 	&:hover {
@@ -198,5 +238,20 @@
 			visibility: visible;
 			transform: translateY(0);
 		}
+
+		@media (width <= 1500px) {
+			.services-card__cost {
+				transform: translateY(-100%);
+			}
+		}
+	}
+
+	@media (width <= 1200px) {
+		padding: 25px;
+	}
+
+	@media (width >= 1500px) {
+		min-height: 360px;
+		max-width: 360px;
 	}
 }
