Вёрстка секции с ценами, адаптация главного экрана

--- a/assets/html/partials/calc.html
+++ b/assets/html/partials/calc.html
@@ -6,7 +6,7 @@
 			</h2>
 
 			<div class="calc__wrap">
-				<table class="calc__table">
+				<table class="calc__table table">
 					<thead>
 						<tr>
 							<th>Услуги</th>
