--- a/assets/html/partials/hero.html
+++ b/assets/html/partials/hero.html
@@ -18,6 +18,9 @@
 				</div>
 			</div>
 			<div class="hero__form">Форма</div>
+			<a class="hero__link link link-reset" href="#/">
+				Заказать звонок
+			</a>
 		</div>
 	</div>
 </section>
