--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,6 +10,8 @@
 @use './chunk/advantages';
 @use './chunk/services';
 @use './chunk/schemes';
+
+// @use './chunk/examples';
 @use './chunk/team';
 @use './chunk/technic';
 @use './chunk/letters';
@@ -19,3 +21,4 @@
 @use './chunk/footer';
 @use './chunk/contacts';
 @use './chunk/calc';
+@use './chunk/price';
