Вёрстка секции с обратной связью

--- a/assets/html/partials/application.html
+++ b/assets/html/partials/application.html
@@ -1,9 +1,62 @@
 <section class="section">
 	<div class="container">
 		<div class="application">
-			<h2 class="application__title">
+			<h2 class="application__title title">
 				Свяжитесь с нами или оставьте заявку и мы перезвоним вам в течении 5 минут
 			</h2>
+			<div class="application__wrap">
+
+				<div class="application__left">
+					<div class="application__advantages application-advantages">
+						<div class="application-advantages__card">
+							<svg class="application-advantages__icon">
+								<use href="img/icons/sprite.svg#mark"></use>
+							</svg>
+							<p class="application-advantages__text text">
+								Расскажем поэтапно как будет проходить работа
+							</p>
+						</div>
+						<div class="application-advantages__card">
+							<svg class="application-advantages__icon">
+								<use href="img/icons/sprite.svg#mark"></use>
+							</svg>
+							<p class="application-advantages__text text">
+								Расскажем поэтапно как будет проходить работа
+							</p>
+						</div>
+						<div class="application-advantages__card">
+							<svg class="application-advantages__icon">
+								<use href="img/icons/sprite.svg#mark"></use>
+							</svg>
+							<p class="application-advantages__text text">
+								Расскажем поэтапно как будет проходить работа
+							</p>
+						</div>
+						<div class="application-advantages__card">
+							<svg class="application-advantages__icon">
+								<use href="img/icons/sprite.svg#mark"></use>
+							</svg>
+							<p class="application-advantages__text text">
+								Расскажем поэтапно как будет проходить работа
+							</p>
+						</div>
+					</div>
+
+					<h3 class="application__subtitle">
+						Успейте получить скидку 20% до начала сезона, звоните или пишите:
+					</h3>
+
+					<div class="application__inner">
+						1
+						2
+					</div>
+				</div>
+
+				<form class="application__form">
+					ФОРМА
+				</form>
+			</div>
+
 		</div>
 	</div>
 </section>
