--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -49,6 +49,16 @@
 					<a class="header__link link link-reset" href="#">Заказать звонок</a>
 				</div>
 			</div>
+
+			<div class="header__socials header__socials--mobile socials">
+				<a class="socials__link socials__link--wa fa-whatsapp link-reset" href="#/" target="_blank">
+				</a>
+				<a class="socials__link socials__link--tg fa-telegram link-reset" href="#/" target="_blank">
+				</a>
+				<a class="socials__link socials__link--vk fa-vk link-reset" href="#/" target="_blank">
+				</a>
+			</div>
+
 			<div class="header__menu menu">
 				<button class="menu__burger burger btn-reset">
 					<span class="burger__line"></span>
