--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -20,12 +20,21 @@
 
 		@media (width <= 1100px) {
 			max-width: 150px;
+
+			@media (width <= 1025px) {
+				max-width: 120px;
+			}
 		}
 	}
 
 	@media (width <= 1300px) {
 		padding-right: 40px;
 		padding-left: 20px;
+	}
+
+	@media (width <= 1025px) {
+		padding: 0;
+		background: none;
 	}
 }
 
