--- a/assets/scss/chunk/_header.scss
+++ b/assets/scss/chunk/_header.scss
@@ -8,8 +8,11 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding: 0;
 		max-width: 100%;
+
+		@media (width > 1025px) {
+			padding: 0;
+		}
 	}
 
 	&__inner {
@@ -25,6 +28,14 @@
 
 		@media (width <= 1100px) {
 			padding-left: 10px;
+		}
+
+		@media (width <= 1025px) {
+			flex-direction: row;
+			align-items: center;
+			justify-content: flex-end;
+			padding-left: 0;
+			gap: 30px;
 		}
 	}
 
@@ -56,6 +67,10 @@
 				gap: 20px;
 			}
 		}
+
+		@media (width <= 1025px) {
+			display: none;
+		}
 	}
 
 	&__socials {
@@ -75,12 +90,27 @@
 			transform: rotate(23deg);
 		}
 
+		@media (width <= 1025px) {
+			width: 100%;
+			max-width: 135px;
+		}
+
+		@media (width > 1025px) {
+			&--mobile {
+				display: none;
+			}
+		}
+
 		@media (width <= 1100px) {
 			padding-right: 0;
 
 			&::before {
 				display: none;
 			}
+		}
+
+		@media (width <= 1025px) {
+			padding-right: 40px;
 		}
 	}
 
@@ -102,6 +132,10 @@
 	&--sticky {
 		position: sticky;
 		transition: top 0.3s;
+	}
+
+	@media (width <= 1025px) {
+		padding: 10px 0;
 	}
 }
 
